--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Scheduling appliaction for gym</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
     </properties>
    
     <dependencies>
@@ -130,20 +130,11 @@
 
     <build>
         <plugins>
-        
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<source>11</source> 
-					<target>11</target>
-				</configuration>
-			</plugin>
-			
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
-	
-	 
 
 </project>
